# Percer

./: .gitignore  LICENSE  README.md  percer.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
scripts/: compare_signatures.py  download_file.py  dump_sections.py  hash_to_authentihash.py  print_sections.py  vt_certs.py  vt_compare_signatures.py  vt_download_file.py  vt_dump_signatures.py  vt_filter_signatures.py  vt_hash_to_pesha256.py  vt_hunt.py  vt_pesha256_to_sha256.py  vt_run_query.py  vt_tests.py
src/percer/: __init__.py  analyzer.py  cli.py  constants.py  logger.py  printer.py  virustotal.py
tests/: dump_signatures.py  filter_signatures.py  vt_run_query.py
